clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_live_longer/borrow_live_longer.cbs
// RUN: %clang_cc1 -verify %s

void use_mut(int *borrow p) {}
T* owned safe_malloc<T>(T value);
void free_owned<T>(T* owned p);
void free(void*);

void test1() {
  int local = 42;
  int *borrow p = &mut local;  // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  {
    int local1 = 42;
    p = &mut local1;
  }
  use_mut(p);
}

void test2(int* borrow p) {  // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  {
    int local1 = 42;
    p = &mut local1;
  }
  use_mut(p);
}

void test3() {
  int local = 42;
  int *borrow p = &mut local;  // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  if (1) {
    int local1 = 42;
    p = &mut local1;
  }
  use_mut(p);
}

void test4() {
  int local = 42;
  int *borrow p = &mut local;  // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  if (local > 0) {
    int local1 = 42;
    p = &mut local1;
  } else {
    int local2 = 42;
    p = &mut local2; 
  }
  use_mut(p);
}

void test5() {
  int *owned oriPtr = safe_malloc<int>(0);
  int *borrow p = &mut * oriPtr; // expected-note {{previous borrow is here}}
  free_owned<int>(oriPtr);       // expected-error {{Can not modify 'oriPtr' because be borrowed}}
  use_mut(p);
}

void test6(int *owned oriPtr) {
  int *borrow p = &mut * oriPtr;  // expected-note {{previous borrow is here}}
  free_owned<int>(oriPtr);       // expected-error {{Can not modify 'oriPtr' because be borrowed}}
  use_mut(p);
}

void test7() {
  int a = 5;
  int *owned oriPtr = safe_malloc<int>(0);
  int *borrow p = &mut* oriPtr;  // expected-note {{previous borrow is here}}
                                 // expected-note@-1 {{previous borrow is here}}
  if (a > 0) {
    free_owned<int>(oriPtr);     // expected-error {{Can not modify 'oriPtr' because be borrowed}}
  } else {
    free_owned<int>(oriPtr);     // expected-error {{Can not modify 'oriPtr' because be borrowed}}
  }
  use_mut(p);
}

struct S1 { int a; };
void test8() {
  int local = 42;
  int *borrow p = &mut local;  // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  {
    struct S1 s = { .a = 42,  };
    p = &mut s.a;
  }
  use_mut(p);
}

struct S2 { int* owned b; };
void test9() {
  int local = 42;
  int *borrow p = &mut local;   // expected-note {{previous borrow is here}} expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  {
    struct S2 s = { .b = safe_malloc<int>(5) };
    p = &mut *s.b;
    free_owned<int>(s.b); // expected-error {{Can not modify 's.b' because be borrowed}}
  }
  use_mut(p);
}

struct S3 { struct S1 c; };
void test10() {
  int local = 42;
  int *borrow p = &mut local;  // expected-error {{borrow pointer variable 'p' lives longer than target variable}}
  {
    struct S1 s1 = { .a = 42 };
    struct S3 s2 = { .c = s1 };
    p = &mut s2.c.a;
  }
  use_mut(p);
}
int main() {
  int local = 5;
  int *owned oriPtr = safe_malloc<int>(0); 
  test1();
  test2(&mut local);
  test3();
  test4();
  test5();
  test6(oriPtr);
  test7();
  test8();
  test9();
  test10();
  return 0;
}